# Agentic-Blogging-Assistant

./: .gitignore  CLAUDE.md  LAUNCH_GUIDE.md  README.md  deploy-frontend-complete.sh  deploy-frontend.sh  integration_test.py  launch-parallel.sh  launch.sh  pyproject.toml  start-testing.sh  stop-testing.sh
agentic_blogging_assistant.egg-info/: PKG-INFO  SOURCES.txt
docs/: DEPLOYMENT.md
root/: .dockerignore  .env.template  Dockerfile  __init__.py  requirements.txt
root/backend/: api_v2.py  debug_blog_draft_nodes.py  interactive_blog_draft_tester.py  main.py  pytest.ini  test-requirements.txt  test_blog_draft_generator.py  test_outline_generator.py  test_parser.py
root/backend/agents/: __init__.py  base_agent.py  blog_draft_generator_agent.py  blog_refinement_agent.py  content_parsing_agent.py  cost_tracking_decorator.py  cost_tracking_state.py  outline_generator_agent.py  social_media_agent.py
root/backend/config/: __init__.py  settings.py  supabase_client.py
root/backend/dependencies/: auth.py
root/data/: projects.db
root/frontend/: api_client.py  app.py  auth_debug.py  auto_save_manager.py  config.py  new_app_api.py  requirements.txt  streamlit_app.py
root/mcp_server/: .env.example  CLAUDE_DESKTOP_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  STRUCTURE.md  __init__.py  api_client.py  config.py  requirements-mcp.txt  server.py  test_tools.py  unified_server.py
root/migrations/: 001_initial_schema.sql  002_add_outline_hash.sql  003_add_image_placeholders.sql
scripts/: complete_cache_migration.py  migrate_endpoints.py  migrate_to_sql.py
(+110 files in other folders)
